0.27.0 - Translation.metadata is fully encapsulated now